--- a/components/index.html
+++ b/components/index.html
@@ -25,12 +25,12 @@
           <!-- Desktop Navbar Links -->
           <ul id="navlinks-container">
             <li>
-              <a target="_blank" href="../index.html" title="Home">
+              <a href="../index.html" title="Home">
                 <i class="ri-home-9-line"></i>
               </a>
             </li>
             <li>
-              <a target="_blank" href="../main/about/about.html">About Us</a>
+              <a  href="../main/about/about.html">About Us</a>
             </li>
             <li>
               <a target="_blank" href="../templates/index.html">Templates</a>
@@ -65,12 +65,12 @@
         </div>
         <ul>
           <li>
-            <a target="_blank" href="#" title="Home">
+            <a  href="#" title="Home">
               <i class="ri-home-9-line"></i>
             </a>
           </li>
           <li>
-            <a target="_blank" href="../main/about/about.html">About Us</a>
+            <a  href="../main/about/about.html">About Us</a>
           </li>
           <li>
             <a target="_blank" href="../templates/index.html">Templates</a>
