--- a/templates/index.html
+++ b/templates/index.html
@@ -31,12 +31,12 @@
           <!-- Desktop Navbar Links -->
           <ul id="navlinks-container">
             <li>
-              <a target="_blank" href="../index.html" title="Home">
+              <a  href="../index.html" title="Home">
                 <i class="ri-home-9-line"></i>
               </a>
             </li>
             <li>
-              <a target="_blank" href="../main/about/about.html">About Us</a>
+              <a  href="../main/about/about.html">About Us</a>
             </li>
             <li>
               <a target="_blank" href="../components/index.html">Components</a>
@@ -71,12 +71,12 @@
         </div>
         <ul>
           <li>
-            <a target="_blank" href="#" title="Home">
+            <a  href="../index.html" title="Home">
               <i class="ri-home-9-line"></i>
             </a>
           </li>
           <li>
-            <a target="_blank" href="../main/about/about.html">About Us</a>
+            <a  href="../main/about/about.html">About Us</a>
           </li>
           <li>
             <a target="_blank" href="../components/index.html">Components</a>
